--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>welcom to learn git </h1>
+    <h1>Lorem ipsum dolor sit amet.</h1>
+    <p>Find account</p>
+    <p>Find account</p>
 </body>
 </html>
