--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
 </head>
 <body>
     <h1>welcom to learn git </h1>
-    <h1>Lorem ipsum dolor sit amet.</h1>
-    <p>Find account</p>
-    <p>Find account</p>
-    <h4>Welcome PPIedu.com</h4>
+    <h1>today learn code vb.net so happay</h1>
 </body>
 </html>
